# magiosconfigtocsv

./: README.md  pyproject.toml  setup.py
nagiosconfigtocsv/: __main_.py
