[project]
name = "nagios-to-csv"
version = "0.0.1"
authors = [
  { name="Asiri Hewage", email="foolmashi@gmail.com" },
  { name="Shrimali Senevirathna", email="shrimaliasi@gmail.com" },
]
description = "Extract Nagios Configs to CSV - Python"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/shriasi/nagiosconfigtocsv"
"Bug Tracker" = "https://github.com/shriasi/nagiosconfigtocsv/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"